samples/_failures_safe/1761604714_484593_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69b2b54d.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_69b2b54d.c:172:9: error: expected declaration or statement at end of input
  172 |         case TOKEN_OPERATOR:
      |         ^~~~
./samples/SAFE/__tmp_69b2b54d.c:172:9: error: expected declaration or statement at end of input
